encounter, labelling it 'stdout'. This permits multiplexing such streams and
detangling the stdout streams from each input.

The subunit libraries (Python etc) have not changed their behaviour: they
still emit v1 from their existing API calls. New API's are being added
and applications should migrate once their language has those API's available.

IMPROVEMENTS
~~~~~~~~~~~~

* v2 protocol draft included in this release.
  (Robert Collins)

* Two new Python classes -- ``StreamResultToBytes`` and
  ``ByteStreamToStreamResult`` handle v2 generation and parsing.
  (Robert Collins)

0.0.10
------

BUG FIXES
~~~~~~~~~

* make_stream_binary is now public for reuse. (Robert Collins)

* NAME was not defined in the protocol BNF. (Robert Collins)

* UnsupportedOperation is available in the Python2.6 io library, so ask
  forgiveness rather than permission for obtaining it. (Robert Collins)

* Streams with no fileno() attribute are now supported, but they are not
  checked for being in binary mode: be sure to take care of that if using
  the library yourself. (Robert Collins)

0.0.9
-----

BUG FIXES
~~~~~~~~~

* All the source files are now included in the distribution tarball.
  (Arfrever Frehtes Taifersar Arahesis, Robert Collins, #996275)

* ``python/subunit/tests/test_run.py`` and ``python/subunit/filters.py`` were
  not included in the 0.0.8 tarball. (Robert Collins)

* Test ids which include non-ascii unicode characters are now supported.
  (Robert Collins, #1029866)

* The ``failfast`` option to ``subunit.run`` will now work. The dependency on
  testtools has been raised to 0.9.23 to permit this.
  (Robert Collins, #1090582)

0.0.8
-----

IMPROVEMENTS
~~~~~~~~~~~~

* Perl module now correctly outputs "failure" instead of "fail".  (Stewart Smith)

* Shell functions now output timestamps. (Stewart Smith, Robert Collins)

* 'subunit2csv' script that converts subunit output to CSV format.
  (Jonathan Lange)
